--- a/react-native/BasicReactNative/package.json
+++ b/react-native/BasicReactNative/package.json
@@ -7,13 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "0.18.0",
+    "prop-types": "15.7.2",
     "random-string": "^0.2.0",
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-button": "^2.3.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-image-slider": "2.0.3",
     "react-native-modalbox": "^1.7.1",
+    "react-native-slideshow": "1.0.1",
     "react-native-swipeout": "^2.3.6",
+    "react-native-webview": "5.7.0",
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
