--- a/react-native/NoteReactNative/package.json
+++ b/react-native/NoteReactNative/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.3",
+    "add": "^2.0.6",
     "axios": "0.18.0",
     "prop-types": "15.7.2",
     "react": "16.8.3",
@@ -19,7 +21,8 @@
     "redux": "4.0.1",
     "redux-persist": "5.10.0",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "yarn": "^1.15.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
