--- a/react-native/NoteReactNative/package.json
+++ b/react-native/NoteReactNative/package.json
@@ -7,11 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.3.3",
+    "@react-native-community/async-storage": "1.3.3",
     "add": "^2.0.6",
     "axios": "0.18.0",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.25",
     "prop-types": "15.7.2",
     "react": "16.8.3",
+    "react-moment": "0.9.2",
     "react-native": "0.59.5",
     "react-native-elements": "1.1.0",
     "react-native-gesture-handler": "1.1.0",
