--- a/react-native/NoteReactNative/package.json
+++ b/react-native/NoteReactNative/package.json
@@ -24,6 +24,7 @@
     "redux": "4.0.1",
     "redux-persist": "5.10.0",
     "redux-thunk": "2.3.0",
+    "remote-redux-devtools": "0.5.16",
     "reselect": "4.0.0",
     "yarn": "^1.15.2"
   },
