--- a/react-native/BasicReactNative/package.json
+++ b/react-native/BasicReactNative/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-button": "^2.3.0",
+    "react-native-flash-message": "0.1.12",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-slider": "2.0.3",
     "react-native-modalbox": "^1.7.1",
