--- a/react-native/BasicReactNative/package.json
+++ b/react-native/BasicReactNative/package.json
@@ -13,12 +13,15 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-button": "^2.3.0",
+    "react-native-elements": "1.1.0",
     "react-native-flash-message": "0.1.12",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-image-slider": "2.0.3",
+    "react-native-modal-datetime-picker": "7.4.0",
     "react-native-modalbox": "^1.7.1",
     "react-native-slideshow": "1.0.1",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "6.4.2",
     "react-native-webview": "5.7.0",
     "react-navigation": "^3.8.1"
   },
